local css fix for squashed blockquote image

--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -1,3 +1,8 @@
+.uds-blockquote.with-image img {
+  width: 180px;
+  height: 180px;
+}
+
 .pictureOriginal {
   width: 120px;
   height: 120px;
